create location component

--- a/02/tsconfig.json
+++ b/02/tsconfig.json
@@ -18,8 +18,23 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "app/*": ["./src/*"]
+        "app/*": ["./src/*"],
+        "assets/*": ["./src/assets/*"],
+        "components/*": ["./src/components/*"],
+        "configs/*": ["./src/lib/configs/*"],
+        "context/*": ["./src/context/*"],
+        "css/*": ["./src/styles/*"],
+        "data/*": ["./src/data/*"],
+        "functions/*": ["./src/lib/functions/*"],
+        "hooks/*": ["./src/lib/hooks/*"],
+        "layout/*": ["./src/components/Layout/*"],
+        "l_nav/*": ["./src/components/Layout/Navigation/*"],
+        "lib/*": ["./src/lib/*"],
+        "ts/*": ["./src/types/*"],
+        "utils/*": ["./src/components/Utils/*"],
+        "views/*": ["./src/components/Views/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
