--- a/02/.eslintrc.json
+++ b/02/.eslintrc.json
@@ -4,37 +4,8 @@
         "next/core-web-vitals",
         "prettier",
         "eslint:recommended",
-        "plugin:prettier/recommended",
         "plugin:@typescript-eslint/recommended"
     ],
-    "plugins": ["simple-import-sort", "prettier", "@typescript-eslint"],
-    "rules": {
-        "no-alert": 2,
-        "no-confusing-arrow": 0,
-        "no-underscore-dangle": 2,
-        "no-console": 1,
-        "no-param-reassign": 2,
-        "no-new": 2,
-        "no-shadow": 0,
-        "no-plusplus": 2,
-        "no-undef": 2,
-        "no-array-constructor": 0,
-        "no-nested-ternary": 2,
-        "@typescript-eslint/no-shadow": 2,
-        "@typescript-eslint/no-explicit-any": 2,
-        "@typescript-eslint/no-var-requires": 0,
-        "import/no-cycle": 0,
-        "import/no-named-default": 2,
-        "import/prefer-default-export": 0,
-        "import /extensions": 0,
-        "import/no-unresolver": 2,
-        "import/no-extraneous-dependecies": 0,
-        "import/first": 2,
-        "import/newline-after-import": 2,
-        "import/no-absolute-path": 2,
-        "import/order": 0,
-        "react/destructuring-assigmnet": 2,
-        "react/jsx-no-useless-fragment": 2
-    },
+    "plugins": ["simple-import-sort",  "@typescript-eslint"],
     "ignorePatterns": ["node_modules", "build", "dist", "public"]
 }
