--- a/02/package.json
+++ b/02/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^4.7.1",
+    "@egjs/react-flicking": "^4.11.2",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
