--- a/02/package.json
+++ b/02/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "framer-motion": "^10.16.16",
     "prettier": "^3.1.1",
+    "react-responsive": "^9.0.2",
     "typescript": "^5.3.3"
   }
 }
